--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy>=1.24.0
 catboost>=1.2.0
 scikit-learn>=1.3.0
 plotly>=5.17.0
-openai>=1.3.0
 joblib>=1.3.0
+# openai>=1.3.0  # Optional: Only needed if LLM features are enabled (currently disabled - using rule-based explanations)
 
 
